Room on program and members picture update

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                   <div class="col-lg-6">
                     <div class="track-header"
                       style="background-color: #e9c46a; padding: 10px; border-radius: 5px; margin-bottom: 15px;">
-                      <h5 style="margin: 0; color: #264653;">Beginner Path</h5>
+                      <h5 style="margin: 0; color: #264653;">Beginner Path - Room 206</h5>
                     </div>
 
                     <div class="time-slot beginner-path" data-aos="fade-up">
@@ -428,7 +428,7 @@
                   <div class="col-lg-6">
                     <div class="track-header"
                       style="background-color: #2a9d8f; padding: 10px; border-radius: 5px; margin-bottom: 15px;">
-                      <h5 style="margin: 0; color: white;">Advanced Path</h5>
+                      <h5 style="margin: 0; color: white;">Advanced Path - Room 407</h5>
                     </div>
 
                     <div class="time-slot advanced-path" data-aos="fade-up">
@@ -461,14 +461,14 @@
                 <div class="time-slot general-path" data-aos="fade-up">
                   <div class="time-badge">13:00 - 14:30</div>
                   <div class="event-content">
-                    <h4><i class="icofont-lunch"></i> Lunch Break and Collective Intelligence Workshop </h4>
+                    <h4><i class="icofont-lunch"></i> Lunch Break and Collective Intelligence Workshop - Room 407</h4>
                   </div>
                 </div>
 
                 <div class="time-slot social-event" data-aos="fade-up">
                   <div class="time-badge">14:30 - 15:00</div>
                   <div class="event-content">
-                    <h4>Project Presentations</h4>
+                    <h4>Project Presentations - Room 407</h4>
                   </div>
                 </div>
 
@@ -476,7 +476,7 @@
                   <div class="col-lg-6">
                     <div class="track-header"
                       style="background-color: #f4a261; padding: 10px; border-radius: 5px; margin-bottom: 15px;">
-                      <h5 style="margin: 0; color: #264653;">Open Software Path</h5>
+                      <h5 style="margin: 0; color: #264653;">Open Software Path - Room 407</h5>
                     </div>
 
                     <div class="time-slot software-path" data-aos="fade-up">
@@ -491,7 +491,7 @@
                   <div class="col-lg-6">
                     <div class="track-header"
                       style="background-color: #e76f51; padding: 10px; border-radius: 5px; margin-bottom: 15px;">
-                      <h5 style="margin: 0; color: white;">Open Hardware Path</h5>
+                      <h5 style="margin: 0; color: white;">Open Hardware Path - Room 206</h5>
                     </div>
 
                     <div class="time-slot hardware-path" data-aos="fade-up">
@@ -536,7 +536,7 @@
                 <div class="time-slot social-event" data-aos="fade-up">
                   <div class="time-badge">18:30 onwards</div>
                   <div class="event-content">
-                    <h4><i class="icofont-users-social"></i> Social Event</h4>
+                    <h4><i class="icofont-users-social"></i> Social Event - Zoomaï</h4>
                   </div>
                 </div>
               </div>
