--- a/index.html
+++ b/index.html
@@ -224,28 +224,31 @@
         <!-- <h6><i>Deadline is 25th November...</i></h6> -->
         <!-- </div> -->
         <div class="d-flex justify-content-center">
-          <H2> The registration deadline is <span class="deadline-highlight">Friday 16th January</span></H2>
-          <!-- <H2> <b>Sorry :-( Registration is now <font color="#FF0000">CLOSED</font>.</b></H2> -->
+          <!-- <H2> The registration deadline is <span class="deadline-highlight">Friday 16th January</span></H2> -->
+          <H2> <b>Sorry :-( Registration is now <font color="#FF0000">CLOSED</font>.</b></H2>
         </div>
         <p align="center">
           <br>
-          Note that there is a <b></b>limitation of 80 people</b> on site.
-          Please register only if you are sure about your presence, as we do not want to waste food.
+          You may email us at <a href="mailto:brainhack.marseille@gmail.com">brainhack.marseille@gmail.com</a> for any inquiries.
+          
+          <!-- <br> -->
+          <!-- Note that there is a <b></b>limitation of 80 people</b> on site. -->
+          <!-- Please register only if you are sure about your presence, as we do not want to waste food. -->
           <!-- For <b>late registration</b>, you should anyway fill the form (press on the grey 'REGISTER' button) and send
           an <a href="mailto:brainhack.marseille@gmail.com" title="brainhack.marseille@gmail.com">email to the
             organization team</a>. -->
-          <br>
-          Lunch and social event <b>are not guaranteed</b> for late registrations.
-          <br><br>
-          To register to the event, please click on the button below to fill the form.
+          <!-- <br> -->
+          <!-- Lunch and social event <b>are not guaranteed</b> for late registrations. -->
+          <!-- <br><br> -->
+          <!-- To register to the event, please click on the button below to fill the form. -->
         </p>
 
-        <div class="d-flex justify-content-center btn-brainhack-container">
+        <!-- <div class="d-flex justify-content-center btn-brainhack-container">
           <a class="btn-brainhack-primary btn-brainhack-pulse"
             href="https://redcap.int.univ-amu.fr/surveys/?s=WWN874XPP3XJN7WE" title="Register now!">
             <h4>REGISTER NOW</h4>
           </a>
-        </div>
+        </div> -->
       </div>
     </section>
 
