--- a/index.html
+++ b/index.html
@@ -422,6 +422,7 @@
                       <div class="time-badge">12:00 - 13:00</div>
                       <div class="event-content">
                         <h4>Introduction to Git/Github</h4>
+                        <p> <a href="https://github.com/JuliaSprenger/presentations/tree/master/2026-01_Brainhack-Marseille_Intro-Bash-Git">Material</a></p>
                         <p class="speaker"><i class="icofont-user-alt-3"></i> David Meunier (INT) or Julia Sprenger
                         </p>
                       </div>
