add room # to program

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                   <div class="time-badge">9:00 - 10:00</div>
                   <div class="event-content">
                     <h4>Introduction to BrainHack Marseille 2026 and Welcome Breakfast!</h4>
-                    <p class="location"><i class="icofont-location-pin"></i> Location: Bâtiment Pédagogique</p>
+                    <p class="location"><i class="icofont-location-pin"></i> Location: Room 407, Bâtiment Pédagogique</p>
                   </div>
                 </div>
 
@@ -539,7 +539,7 @@
                 <div class="time-slot social-event" data-aos="fade-up">
                   <div class="time-badge">18:30 onwards</div>
                   <div class="event-content">
-                    <h4><i class="icofont-users-social"></i> Social Event - Zoomaï</h4>
+                    <h4><i class="icofont-users-social"></i> Social Event - Zoumaï</h4>
                   </div>
                 </div>
               </div>
@@ -565,7 +565,7 @@
                 <div class="time-slot project-work" data-aos="fade-up">
                   <div class="time-badge">9:30 - 13:00</div>
                   <div class="event-content">
-                    <h4><i class="icofont-code"></i> Projects Work</h4>
+                    <h4><i class="icofont-code"></i> Project Work - Room 407</h4>
                   </div>
                 </div>
 
@@ -579,7 +579,7 @@
                 <div class="time-slot project-work" data-aos="fade-up">
                   <div class="time-badge">14:00 - 18:00</div>
                   <div class="event-content">
-                    <h4><i class="icofont-code"></i> Project Work</h4>
+                    <h4><i class="icofont-code"></i> Project Work - Room 407</h4>
                   </div>
                 </div>
               </div>
@@ -605,7 +605,7 @@
                 <div class="time-slot project-work" data-aos="fade-up">
                   <div class="time-badge">9:30 - 13:00</div>
                   <div class="event-content">
-                    <h4><i class="icofont-code"></i> Project Work</h4>
+                    <h4><i class="icofont-code"></i> Project Work - Room 407</h4>
                   </div>
                 </div>
 
@@ -619,7 +619,7 @@
                 <div class="time-slot project-work" data-aos="fade-up">
                   <div class="time-badge">14:00 - 18:00</div>
                   <div class="event-content">
-                    <h4><i class="icofont-code"></i> Project Work</h4>
+                    <h4><i class="icofont-code"></i> Project Work - Room 407</h4>
                   </div>
                 </div>
               </div>
