--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                       <div class="time-badge">17:00 - 18:00</div>
                       <div class="event-content">
                         <h4>AdaLab and DataForGood</h4>
-                        <p class="speaker"><i class="icofont-user-alt-3"></i> Elodie Giorla (INT)</p>
+                        <p class="speaker"><i class="icofont-user-alt-3"></i> Elodie Giorla (INT) and Franck Le Mat</p>
                       </div>
                     </div>
                   </div>
